src/test/deca/syntax/invalid/custom/circular_includeh.decah
/*
    ceci est un test de commentaire pour le test de l'exception CircularInclude
 */

#include "circular_include.deca"
{}